# python-database-spyder

./: .gitignore  API_GUIDE.md  create_superuser.py  openapi.json  pyproject.toml  run.py  sample_database.db  spyder_metadata.db  test_api.py  test_e2e_introspection.py  test_inspector.py
.docker/: pro.yml
.docker/app/: Dockerfile
.docker/scripts/: create_db_container.sh  local.sh
alembic/: env.py
alembic/versions/: 7221618f8689_add_users_table.py  75822ee87355_add_foreign_key_table_and_column_to_.py  7cf6f6fb336f_add_connections_and_metadata_tables.py
application/di/: dependencies.py
application/services/: auth_service.py  connections_service.py  introspection_service.py  query_execution_service.py  users_service.py
config/: database.py  security.py  settings.py
domain/entities/: __init__.py  api_endpoint.py  connection.py  discovered_table.py  user.py  users.py
driven/db/connections/: __init__.py  adapter.py  mapper.py  models.py
driven/db/metadata/: __init__.py  adapter.py  models.py
driven/db/users/: adapter.py  mapper.py  models.py
driving/api/: fastapi_app.py  main.py
driving/api/routers/: auth.py  connections.py  dashboard.py  introspection.py  query_execution.py  users.py
driving/api/schemas/: auth_schemas.py  connection_schemas.py  introspection_schemas.py  user_schemas.py
driving/api/users/: adapter.py  (+1 more)
frontend/: package-lock.json  package.json
frontend/src/: routeTree.gen.ts
infrastructure/inspectors/: __init__.py  base_inspector.py  inspector_factory.py  mysql_inspector.py  postgres_inspector.py  sqlite_inspector.py
(+34 files in other folders)
