[project]
name = "architecture-python-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aitor Poquet", email = "aitorpoquet@rudo.es" }
]
requires-python = ">=3.12"
dependencies = [
    # FastAPI and web
    "fastapi>=0.116.0",
    "fastapi-mcp>=0.3.4",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # SQLAlchemy and database drivers
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "psycopg2-binary>=2.9,<3.0",  # PostgreSQL sync driver
    "aiomysql>=0.2.0",  # MySQL async driver
    "aiosqlite>=0.20.0",  # SQLite async driver

    # Data validation
    "pydantic[email]>=2.10,<3.0",
    "pydantic-settings>=2.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",

    # Background tasks (optional, for introspection)
    "celery>=5.4,<6.0",
    "redis>=5.2,<6.0",

    # Server
    "gunicorn>=23.0,<24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["application", "config", "domain", "driven", "driving"]

